force-app/main/default/objects/sumoapp__Process__c/fields/sumoapp__InviteTemplateSubType__c.field-meta.xml
<CustomField>
    <fullName>sumoapp__InviteTemplateSubType__c</fullName>
    <label>Invite Template Sub Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>sumoapp__InviteTemplateType__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Account</fullName>
            </value>
            <value>
                <fullName>Case</fullName>
            </value>
            <value>
                <fullName>Lead</fullName>
            </value>
            <value>
                <fullName>Contact</fullName>
            </value>
            <value>
                <fullName>USERS</fullName>
                <label>Users</label>
            </value>
            <value>
                <fullName>PROFILES</fullName>
                <label>Profiles</label>
            </value>
            <value>
                <fullName>GROUPS</fullName>
                <label>Groups</label>
            </value>
            <value>
                <fullName>Result__c</fullName>
                <label>Result</label>
            </value>
            <value>
                <fullName>Blood_Test_Booking__c</fullName>
                <label>Blood Test Bookings</label>
            </value>
            <value>
                <fullName>Bank__c</fullName>
                <isActive>false</isActive>
                <label>Bank__c</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>