force-app/main/default/objects/sumoapp__Process__c/fields/sumoapp__InviteTemplateType__c.field-meta.xml
<CustomField>
    <fullName>sumoapp__InviteTemplateType__c</fullName>
    <label>Invite Template Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SALESFORCE_OBJECTS</fullName>
                <default>true</default>
                <label>Salesforce Objects</label>
            </value>
            <value>
                <fullName>INVITE_LINKS_TAB</fullName>
                <label>Invite Links Tab</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>