force-app/main/default/objects/sumoapp__Process__c/fields/sumoapp__Is12HourTimeFormat__c.field-meta.xml
<CustomField>
    <fullName>sumoapp__Is12HourTimeFormat__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Is 12 Hour Time Format?</description>
    <label>Time Format</label>
    <type>Checkbox</type>
</CustomField>