force-app/main/default/objects/sumoapp__Process__c/fields/sumoapp__IsActive__c.field-meta.xml
<CustomField>
    <fullName>sumoapp__IsActive__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Is Active?</label>
    <type>Checkbox</type>
</CustomField>