force-app/main/default/objects/sumoapp__Process__c/fields/sumoapp__IsBookedAddToGoogleButtonActive__c.field-meta.xml
<CustomField>
    <fullName>sumoapp__IsBookedAddToGoogleButtonActive__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Booked Add  To Google Button Active</label>
    <type>Checkbox</type>
</CustomField>