force-app/main/default/objects/sumoapp__Process__c/fields/sumoapp__IsBookedAddToOutlookButtonActive__c.field-meta.xml
<CustomField>
    <fullName>sumoapp__IsBookedAddToOutlookButtonActive__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Booked Add To Outlook Button Active</label>
    <type>Checkbox</type>
</CustomField>