force-app/main/default/objects/sumoapp__Process__c/fields/sumoapp__IsBookedPrintButtonActive__c.field-meta.xml
<CustomField>
    <fullName>sumoapp__IsBookedPrintButtonActive__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Booked Print Button Active?</label>
    <type>Checkbox</type>
</CustomField>