force-app/main/default/objects/sumoapp__Process__c/fields/sumoapp__IsCancelButtonActive__c.field-meta.xml
<CustomField>
    <fullName>sumoapp__IsCancelButtonActive__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Is Cancel Button Active?</label>
    <type>Checkbox</type>
</CustomField>