force-app/main/default/objects/sumoapp__Process__c/fields/sumoapp__IsCaptchaActive__c.field-meta.xml
<CustomField>
    <fullName>sumoapp__IsCaptchaActive__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Captcha Active?</label>
    <type>Checkbox</type>
</CustomField>