force-app/main/default/objects/sumoapp__Process__c/fields/sumoapp__IsDisplayResourcePoolsFirstActive__c.field-meta.xml
<CustomField>
    <fullName>sumoapp__IsDisplayResourcePoolsFirstActive__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Display Resource Pools First Active?</label>
    <type>Checkbox</type>
</CustomField>