force-app/main/default/objects/sumoapp__Process__c/fields/sumoapp__IsInviteOtherParticipantsActive__c.field-meta.xml
<CustomField>
    <fullName>sumoapp__IsInviteOtherParticipantsActive__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Is Invite other Participants Active?</label>
    <type>Checkbox</type>
</CustomField>