force-app/main/default/objects/sumoapp__Process__c/fields/sumoapp__IsNoteForTheParticipantsActive__c.field-meta.xml
<CustomField>
    <fullName>sumoapp__IsNoteForTheParticipantsActive__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Is Note for the participants Active?</label>
    <type>Checkbox</type>
</CustomField>