force-app/main/default/objects/sumoapp__Process__c/fields/sumoapp__IsRegistrationSectionVisible__c.field-meta.xml
<CustomField>
    <fullName>sumoapp__IsRegistrationSectionVisible__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Online Registration Section Visibility</label>
    <type>Checkbox</type>
</CustomField>