force-app/main/default/objects/sumoapp__Process__c/fields/sumoapp__IsReminderOptInTextActive__c.field-meta.xml
<CustomField>
    <fullName>sumoapp__IsReminderOptInTextActive__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Is Reminder Notification OPT-IN Active?</label>
    <type>Checkbox</type>
</CustomField>