force-app/main/default/objects/sumoapp__Process__c/fields/sumoapp__IsRescheduleButtonActive__c.field-meta.xml
<CustomField>
    <fullName>sumoapp__IsRescheduleButtonActive__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Is Reschdule Button Active?</label>
    <type>Checkbox</type>
</CustomField>