force-app/main/default/objects/sumoapp__Process__c/fields/sumoapp__LeadButtonLabel__c.field-meta.xml
<CustomField>
    <fullName>sumoapp__LeadButtonLabel__c</fullName>
    <label>Lead Button Label</label>
    <type>TextArea</type>
</CustomField>