force-app/main/default/objects/sumoapp__Process__c/fields/sumoapp__LeadFormFields__c.field-meta.xml
<CustomField>
    <fullName>sumoapp__LeadFormFields__c</fullName>
    <label>Lead Form Fields</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>