force-app/main/default/objects/sumoapp__Process__c/fields/sumoapp__LeadMatchingField__c.field-meta.xml
<CustomField>
    <fullName>sumoapp__LeadMatchingField__c</fullName>
    <label>Lead Matching Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>