force-app/main/default/objects/sumoapp__Process__c/fields/sumoapp__LeadsMatchOnlySumoRecords__c.field-meta.xml
<CustomField>
    <fullName>sumoapp__LeadsMatchOnlySumoRecords__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Leads Match Only SUMO Records</label>
    <type>Checkbox</type>
</CustomField>