force-app/main/default/objects/sumoapp__Process__c/fields/sumoapp__LeadSubHeader__c.field-meta.xml
<CustomField>
    <fullName>sumoapp__LeadSubHeader__c</fullName>
    <label>Lead Sub-Header</label>
    <type>TextArea</type>
</CustomField>