force-app/main/default/objects/sumoapp__Process__c/fields/sumoapp__LeadTypeOptions__c.field-meta.xml
<CustomField>
    <fullName>sumoapp__LeadTypeOptions__c</fullName>
    <label>Lead Type Options</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>NEW_LEAD</fullName>
                <default>true</default>
                <label>Create a New Lead Everytime</label>
            </value>
            <value>
                <fullName>MATCH_LEAD</fullName>
                <label>Match Lead on the following field</label>
            </value>
            <value>
                <fullName>MATCH_LEAD_RULES</fullName>
                <label>Match Lead by Salesforce Duplicate Rules</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>