force-app/main/default/objects/sumoapp__Process__c/fields/sumoapp__LimitOfAttendees__c.field-meta.xml
<CustomField>
    <fullName>sumoapp__LimitOfAttendees__c</fullName>
    <label>Limit of Attendees</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>