force-app/main/default/objects/sumoapp__Process__c/fields/sumoapp__LoadBalanceNextXDays__c.field-meta.xml
<CustomField>
    <fullName>sumoapp__LoadBalanceNextXDays__c</fullName>
    <defaultValue>5</defaultValue>
    <label>Load Balance Next [X] days</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>