force-app/main/default/objects/sumoapp__Process__c/fields/sumoapp__LocationNotes__c.field-meta.xml
<CustomField>
    <fullName>sumoapp__LocationNotes__c</fullName>
    <label>Location Notes</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>