force-app/main/default/objects/sumoapp__Process__c/fields/sumoapp__LocationOptions__c.field-meta.xml
<CustomField>
    <fullName>sumoapp__LocationOptions__c</fullName>
    <label>Location Options</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>VID_CONFERENCE</fullName>
                <label>Video Conference</label>
            </value>
            <value>
                <fullName>PHONE_INBOUND</fullName>
                <label>Phone - You will call us</label>
            </value>
            <value>
                <fullName>PHONE</fullName>
                <label>Phone</label>
            </value>
            <value>
                <fullName>OUR_LOCATION</fullName>
                <label>Our Location</label>
            </value>
            <value>
                <fullName>IN_HOUSE</fullName>
                <label>Your Location</label>
            </value>
            <value>
                <fullName>IN_PERSON</fullName>
                <label>In Person</label>
            </value>
            <value>
                <fullName>VIRTUAL_EVENT</fullName>
                <label>Virtual Event</label>
            </value>
            <value>
                <fullName>WEB_CONFERENCE</fullName>
                <isActive>false</isActive>
                <label>WEB_CONFERENCE</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>