force-app/main/default/objects/sumoapp__Process__c/fields/sumoapp__Locations__c.field-meta.xml
<CustomField>
    <fullName>sumoapp__Locations__c</fullName>
    <label>Locations</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>