force-app/main/default/objects/sumoapp__Process__c/fields/sumoapp__LocationTypeSubHeader__c.field-meta.xml
<CustomField>
    <fullName>sumoapp__LocationTypeSubHeader__c</fullName>
    <label>Location Type Sub-Header</label>
    <type>TextArea</type>
</CustomField>