force-app/main/default/objects/sumoapp__Process__c/fields/sumoapp__MatchOnEmail__c.field-meta.xml
<CustomField>
    <fullName>sumoapp__MatchOnEmail__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Match on Email</label>
    <type>Checkbox</type>
</CustomField>