force-app/main/default/objects/sumoapp__Process__c/fields/sumoapp__MultiCalendarSettings__c.field-meta.xml
<CustomField>
    <fullName>sumoapp__MultiCalendarSettings__c</fullName>
    <label>Multi-Calendar Settings</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>