force-app/main/default/objects/sumoapp__Process__c/fields/sumoapp__Name__c.field-meta.xml
<CustomField>
    <fullName>sumoapp__Name__c</fullName>
    <label>Name</label>
    <type>TextArea</type>
</CustomField>