force-app/main/default/objects/sumoapp__Process__c/fields/sumoapp__Opacity__c.field-meta.xml
<CustomField>
    <fullName>sumoapp__Opacity__c</fullName>
    <defaultValue>85</defaultValue>
    <label>Opacity</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>