force-app/main/default/objects/sumoapp__Process__c/fields/sumoapp__OpenEventsLimit__c.field-meta.xml
<CustomField>
    <fullName>sumoapp__OpenEventsLimit__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Open Events Limit</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>