force-app/main/default/objects/sumoapp__Process__c/fields/sumoapp__OrganizerOptions__c.field-meta.xml
<CustomField>
    <fullName>sumoapp__OrganizerOptions__c</fullName>
    <label>Organizer Options</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>MAKE_LEAD_OWNER_THE_PERSON_WHO_APPOINTMENT_WAS_SCHEDULED_WITH</fullName>
                <default>true</default>
                <label>Make Lead Owner the person who Appointment was Scheduled with</label>
            </value>
            <value>
                <fullName>SCHEDULE_APPOINTMENT_WITH_LEAD_OWNER</fullName>
                <label>Schedule Appointment with Lead Owner</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>