force-app/main/default/objects/sumoapp__Process__c/fields/sumoapp__OurLocationDetails__c.field-meta.xml
<CustomField>
    <fullName>sumoapp__OurLocationDetails__c</fullName>
    <label>Our Location - Details</label>
    <type>TextArea</type>
</CustomField>