force-app/main/default/objects/sumoapp__Process__c/fields/sumoapp__OverrideCss__c.field-meta.xml
<CustomField>
    <fullName>sumoapp__OverrideCss__c</fullName>
    <label>Override CSS</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>