force-app/main/default/objects/sumoapp__Process__c/fields/sumoapp__OverrideExistingData__c.field-meta.xml
<CustomField>
    <fullName>sumoapp__OverrideExistingData__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Override Existing Data</label>
    <type>Checkbox</type>
</CustomField>