force-app/main/default/objects/sumoapp__Process__c/fields/sumoapp__OverrideExistingDataAccounts__c.field-meta.xml
<CustomField>
    <fullName>sumoapp__OverrideExistingDataAccounts__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Override Existing Data Accounts</label>
    <type>Checkbox</type>
</CustomField>