force-app/main/default/objects/sumoapp__Process__c/fields/sumoapp__OverrideExistingDataContacts__c.field-meta.xml
<CustomField>
    <fullName>sumoapp__OverrideExistingDataContacts__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Override Existing Data Contacts</label>
    <type>Checkbox</type>
</CustomField>