force-app/main/default/objects/sumoapp__Process__c/fields/sumoapp__OverrideExistingDataLeads__c.field-meta.xml
<CustomField>
    <fullName>sumoapp__OverrideExistingDataLeads__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Override Existing Data Leads</label>
    <type>Checkbox</type>
</CustomField>