force-app/main/default/objects/sumoapp__Process__c/fields/sumoapp__PaymentSubHeader__c.field-meta.xml
<CustomField>
    <fullName>sumoapp__PaymentSubHeader__c</fullName>
    <label>Payment Sub Header</label>
    <length>255</length>
    <type>Text</type>
</CustomField>