force-app/main/default/objects/sumoapp__Process__c/fields/sumoapp__PhoneInboundDetails__c.field-meta.xml
<CustomField>
    <fullName>sumoapp__PhoneInboundDetails__c</fullName>
    <label>Phone - You Will Call Us - Details</label>
    <type>TextArea</type>
</CustomField>