force-app/main/default/objects/sumoapp__Process__c/fields/sumoapp__ProcessType__c.field-meta.xml
<CustomField>
    <fullName>sumoapp__ProcessType__c</fullName>
    <label>Process Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>LEADS</fullName>
                <default>true</default>
                <label>Prospect Scheduling with Leads</label>
            </value>
            <value>
                <fullName>BUSINESS_CONTACTS</fullName>
                <label>Customer Scheduling (Business Contacts)</label>
            </value>
            <value>
                <fullName>PERSON_ACCOUNTS</fullName>
                <label>Customer Scheduling (Person Accounts)</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>