force-app/main/default/objects/sumoapp__Process__c/fields/sumoapp__PushEmailReplyToCaseComment__c.field-meta.xml
<CustomField>
    <fullName>sumoapp__PushEmailReplyToCaseComment__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Push Email Reply to Case Comment</label>
    <type>Checkbox</type>
</CustomField>