force-app/main/default/objects/sumoapp__Process__c/fields/sumoapp__RadiusToLoad__c.field-meta.xml
<CustomField>
    <fullName>sumoapp__RadiusToLoad__c</fullName>
    <defaultValue>30</defaultValue>
    <label>Mile Radius to Load</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>