force-app/main/default/objects/sumoapp__Process__c/fields/sumoapp__RegisterPromoCodeLabel__c.field-meta.xml
<CustomField>
    <fullName>sumoapp__RegisterPromoCodeLabel__c</fullName>
    <label>Register Promo Code Label</label>
    <type>TextArea</type>
</CustomField>