force-app/main/default/objects/sumoapp__Process__c/fields/sumoapp__RegisterSubHeader__c.field-meta.xml
<CustomField>
    <fullName>sumoapp__RegisterSubHeader__c</fullName>
    <label>Register Sub-Header</label>
    <type>TextArea</type>
</CustomField>