force-app/main/default/objects/sumoapp__Process__c/fields/sumoapp__RegisterSubscribeLabel__c.field-meta.xml
<CustomField>
    <fullName>sumoapp__RegisterSubscribeLabel__c</fullName>
    <label>Register Subscribe Label</label>
    <type>TextArea</type>
</CustomField>