force-app/main/default/objects/sumoapp__Process__c/fields/sumoapp__ReminderEmailOptions__c.field-meta.xml
<CustomField>
    <fullName>sumoapp__ReminderEmailOptions__c</fullName>
    <defaultValue>&quot;1_DAY_PRIOR&quot;</defaultValue>
    <label>Reminder Email Options</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>sumoapp__IsActive__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>sumoapp__ReminderOptions</valueSetName>
    </valueSet>
</CustomField>