force-app/main/default/objects/sumoapp__Process__c/fields/sumoapp__ReminderFirstTextMessageOptions__c.field-meta.xml
<CustomField>
    <fullName>sumoapp__ReminderFirstTextMessageOptions__c</fullName>
    <defaultValue>&quot;1_HOUR_PRIOR&quot;</defaultValue>
    <label>Reminder 1st Text Message Options</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>sumoapp__ReminderOptions</valueSetName>
    </valueSet>
</CustomField>