force-app/main/default/objects/sumoapp__Process__c/fields/sumoapp__ReminderOptInText__c.field-meta.xml
<CustomField>
    <fullName>sumoapp__ReminderOptInText__c</fullName>
    <label>Reminder Notification OPT-IN</label>
    <type>TextArea</type>
</CustomField>