force-app/main/default/objects/sumoapp__Process__c/fields/sumoapp__ReminderSecondTextMessageOptions__c.field-meta.xml
<CustomField>
    <fullName>sumoapp__ReminderSecondTextMessageOptions__c</fullName>
    <defaultValue>&quot;DO_NOT_SEND&quot;</defaultValue>
    <label>Reminder 2nd Text Message Options</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>sumoapp__ReminderOptions</valueSetName>
    </valueSet>
</CustomField>