force-app/main/default/objects/sumoapp__Process__c/fields/sumoapp__ReminderTextTemplate__c.field-meta.xml
<CustomField>
    <fullName>sumoapp__ReminderTextTemplate__c</fullName>
    <label>Reminder Text Template</label>
    <type>TextArea</type>
</CustomField>