force-app/main/default/objects/sumoapp__Process__c/fields/sumoapp__ResourceSearchCriteria__c.field-meta.xml
<CustomField>
    <fullName>sumoapp__ResourceSearchCriteria__c</fullName>
    <label>Resource Search Criteria</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>