force-app/main/default/objects/sumoapp__Process__c/fields/sumoapp__ResourceSearchFieldsToDisplay__c.field-meta.xml
<CustomField>
    <fullName>sumoapp__ResourceSearchFieldsToDisplay__c</fullName>
    <label>Resource Search Fields To Display</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>