force-app/main/default/objects/sumoapp__Process__c/fields/sumoapp__RoomSearchCriteria__c.field-meta.xml
<CustomField>
    <fullName>sumoapp__RoomSearchCriteria__c</fullName>
    <label>Room Search Criteria</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>