force-app/main/default/objects/sumoapp__Process__c/fields/sumoapp__RoomSearchFieldsToDisplay__c.field-meta.xml
<CustomField>
    <fullName>sumoapp__RoomSearchFieldsToDisplay__c</fullName>
    <label>Room Search Fields To Display</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>