force-app/main/default/objects/sumoapp__Process__c/fields/sumoapp__SendEmailToAdmin__c.field-meta.xml
<CustomField>
    <fullName>sumoapp__SendEmailToAdmin__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Send Email To Admin</label>
    <type>Checkbox</type>
</CustomField>