force-app/main/default/objects/sumoapp__Process__c/fields/sumoapp__SendInviteEmailTemplate__c.field-meta.xml
<CustomField>
    <fullName>sumoapp__SendInviteEmailTemplate__c</fullName>
    <label>Send Invite Email Template</label>
    <length>18</length>
    <type>Text</type>
</CustomField>