force-app/main/default/objects/sumoapp__Process__c/fields/sumoapp__SendToAdminEmailTemplate__c.field-meta.xml
<CustomField>
    <fullName>sumoapp__SendToAdminEmailTemplate__c</fullName>
    <label>Send To Admin Email Template</label>
    <length>18</length>
    <type>Text</type>
</CustomField>