force-app/main/default/objects/sumoapp__Process__c/fields/sumoapp__Services__c.field-meta.xml
<CustomField>
    <fullName>sumoapp__Services__c</fullName>
    <label>Services</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>