force-app/main/default/objects/sumoapp__Process__c/fields/sumoapp__SiteUrl__c.field-meta.xml
<CustomField>
    <fullName>sumoapp__SiteUrl__c</fullName>
    <label>Site URL</label>
    <type>Url</type>
</CustomField>