force-app/main/default/objects/sumoapp__Process__c/fields/sumoapp__SkipWhereStep__c.field-meta.xml
<CustomField>
    <fullName>sumoapp__SkipWhereStep__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Skip Where Step</label>
    <type>Checkbox</type>
</CustomField>