force-app/main/default/objects/sumoapp__Process__c/fields/sumoapp__SlotIntervalGranularity__c.field-meta.xml
<CustomField>
    <fullName>sumoapp__SlotIntervalGranularity__c</fullName>
    <label>Time-Slot intervals</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>15</fullName>
                <default>true</default>
                <label>15 minutes</label>
            </value>
            <value>
                <fullName>20</fullName>
                <label>20 minutes</label>
            </value>
            <value>
                <fullName>30</fullName>
                <label>30 minutes</label>
            </value>
            <value>
                <fullName>60</fullName>
                <label>60 minutes</label>
            </value>
            <value>
                <fullName>APPOINTMENT_DURATION</fullName>
                <label>Appointment Duration</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>