force-app/main/default/objects/sumoapp__Process__c/fields/sumoapp__StartSlotOnIntervalStart__c.field-meta.xml
<CustomField>
    <fullName>sumoapp__StartSlotOnIntervalStart__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If enabled, time slots always start at a multiple of selected interval. If disabled, time slots start at first availble minute.</description>
    <label>Is Top Of The Interval?</label>
    <type>Checkbox</type>
</CustomField>