force-app/main/default/objects/sumoapp__Process__c/fields/sumoapp__TargetOriginsWhitelist__c.field-meta.xml
<CustomField>
    <fullName>sumoapp__TargetOriginsWhitelist__c</fullName>
    <description>Specifies what the origin of Online Scheduler host window must be for the Post Message to be dispatched.</description>
    <label>Target Origins Whitelist</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>