force-app/main/default/objects/sumoapp__Process__c/fields/sumoapp__UseDistanceRuleBeforePriority__c.field-meta.xml
<CustomField>
    <fullName>sumoapp__UseDistanceRuleBeforePriority__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Use Distance Rule before Priority</label>
    <type>Checkbox</type>
</CustomField>