force-app/main/default/objects/sumoapp__Process__c/fields/sumoapp__UserChooseCustomError__c.field-meta.xml
<CustomField>
    <fullName>sumoapp__UserChooseCustomError__c</fullName>
    <label>User Choose Custom Error</label>
    <type>TextArea</type>
</CustomField>