force-app/main/default/objects/sumoapp__Process__c/fields/sumoapp__UseResourcePoolErrorMessage__c.field-meta.xml
<CustomField>
    <fullName>sumoapp__UseResourcePoolErrorMessage__c</fullName>
    <label>Use Resource Pool Error Message</label>
    <type>TextArea</type>
</CustomField>