force-app/main/default/objects/sumoapp__Process__c/fields/sumoapp__UserSearchCriteria__c.field-meta.xml
<CustomField>
    <fullName>sumoapp__UserSearchCriteria__c</fullName>
    <label>User Search Criteria</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>