force-app/main/default/objects/sumoapp__Process__c/fields/sumoapp__UserSearchFieldsToDisplay__c.field-meta.xml
<CustomField>
    <fullName>sumoapp__UserSearchFieldsToDisplay__c</fullName>
    <label>User Search Fields To Display</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>