force-app/main/default/objects/sumoapp__Process__c/fields/sumoapp__VideoConferenceDetails__c.field-meta.xml
<CustomField>
    <fullName>sumoapp__VideoConferenceDetails__c</fullName>
    <label>Video Conference - Details</label>
    <type>TextArea</type>
</CustomField>