force-app/main/default/objects/sumoapp__Process__c/fields/sumoapp__WhatSubHeader__c.field-meta.xml
<CustomField>
    <fullName>sumoapp__WhatSubHeader__c</fullName>
    <label>What Sub-Header</label>
    <type>TextArea</type>
</CustomField>