force-app/main/default/objects/sumoapp__Process__c/fields/sumoapp__WhenDateTimeLabel__c.field-meta.xml
<CustomField>
    <fullName>sumoapp__WhenDateTimeLabel__c</fullName>
    <label>When Date/Time Label</label>
    <type>TextArea</type>
</CustomField>