force-app/main/default/objects/sumoapp__Process__c/fields/sumoapp__WhenDescriptionLabel__c.field-meta.xml
<CustomField>
    <fullName>sumoapp__WhenDescriptionLabel__c</fullName>
    <label>When Description Label</label>
    <type>TextArea</type>
</CustomField>