force-app/main/default/objects/sumoapp__Process__c/fields/sumoapp__WhenPriceLabel__c.field-meta.xml
<CustomField>
    <fullName>sumoapp__WhenPriceLabel__c</fullName>
    <label>When Price Label</label>
    <type>TextArea</type>
</CustomField>