force-app/main/default/objects/sumoapp__Process__c/fields/sumoapp__WhenSpacesLabel__c.field-meta.xml
<CustomField>
    <fullName>sumoapp__WhenSpacesLabel__c</fullName>
    <label>When Spaces Label</label>
    <type>TextArea</type>
</CustomField>