force-app/main/default/objects/sumoapp__Process__c/fields/sumoapp__WhenSubHeader__c.field-meta.xml
<CustomField>
    <fullName>sumoapp__WhenSubHeader__c</fullName>
    <label>When Sub-Header</label>
    <type>TextArea</type>
</CustomField>