force-app/main/default/objects/sumoapp__Process__c/fields/sumoapp__WhereNotes__c.field-meta.xml
<CustomField>
    <fullName>sumoapp__WhereNotes__c</fullName>
    <label>Where Notes</label>
    <type>TextArea</type>
</CustomField>