force-app/main/default/objects/sumoapp__Process__c/fields/sumoapp__WhereSubHeader__c.field-meta.xml
<CustomField>
    <fullName>sumoapp__WhereSubHeader__c</fullName>
    <label>Where Sub-Header</label>
    <type>TextArea</type>
</CustomField>