force-app/main/default/objects/sumoapp__Process__c/fields/sumoapp__WhoEmployees__c.field-meta.xml
<CustomField>
    <fullName>sumoapp__WhoEmployees__c</fullName>
    <label>Who Employees</label>
    <type>TextArea</type>
</CustomField>