force-app/main/default/objects/sumoapp__Process__c/fields/sumoapp__WhoFilter__c.field-meta.xml
<CustomField>
    <fullName>sumoapp__WhoFilter__c</fullName>
    <label>Who Filter</label>
    <type>TextArea</type>
</CustomField>