force-app/main/default/objects/sumoapp__Process__c/fields/sumoapp__WhoSubHeader__c.field-meta.xml
<CustomField>
    <fullName>sumoapp__WhoSubHeader__c</fullName>
    <label>Who Sub-Header</label>
    <type>TextArea</type>
</CustomField>