force-app/main/default/objects/sumoapp__Process__c/fields/sumoapp__YourLocationDetails__c.field-meta.xml
<CustomField>
    <fullName>sumoapp__YourLocationDetails__c</fullName>
    <label>Your Location - Details</label>
    <type>TextArea</type>
</CustomField>