force-app/main/default/objects/sumoapp__Process__c/fields/sumoapp__YourLocationSubHeader__c.field-meta.xml
<CustomField>
    <fullName>sumoapp__YourLocationSubHeader__c</fullName>
    <label>Your Location Sub-Header Text</label>
    <type>TextArea</type>
</CustomField>