force-app/main/default/objects/sumoapp__Process__c/recordTypes/sumoapp__EventScheduler.recordType-meta.xml
<RecordType>
    <fullName>sumoapp__EventScheduler</fullName>
    <active>true</active>
    <label>Event Scheduler</label>
</RecordType>