force-app/main/default/objects/sumoapp__Process__c/recordTypes/sumoapp__InviteManager.recordType-meta.xml
<RecordType>
    <fullName>sumoapp__InviteManager</fullName>
    <active>true</active>
    <label>Invite Manager</label>
</RecordType>