force-app/main/default/objects/sumoapp__Process__c/recordTypes/sumoapp__OnlineScheduler.recordType-meta.xml
<RecordType>
    <fullName>sumoapp__OnlineScheduler</fullName>
    <active>true</active>
    <label>Online Scheduler</label>
</RecordType>